--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,13 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "src",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@models/*": ["app/_shared/models/*"],
+      "@services/*" :["app/_shared/services/*"],
+      "@shared/*": ["app/_shared/*"]
+    },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
